Added DTO, Mapper, UserService and Tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,15 @@
+---
 spring:
+  datasource:
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
   profiles:
     default: development
+
+server:
+  port: ${PORT}
