--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,3 +1,4 @@
+---
 spring:
   h2:
     console:
@@ -9,3 +10,5 @@ spring:
     password: sa
   jpa:
       database-platform: org.hibernate.dialect.H2Dialect
+server:
+  port: 9011
