--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -5,8 +5,15 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:mem:devdb
+    url: "jdbc:h2:mem:dev"
     username: sa
     password: sa
   jpa:
       database-platform: org.hibernate.dialect.H2Dialect
+server:
+  port: 9011
+
+logging:
+  level:
+    web: trace
+    sql: trace
