--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,19 +1,19 @@
 ---
 spring:
+  datasource:
+    username: sa
+    password: sa
+    url: "jdbc:h2:mem:dev"
   h2:
     console:
       enabled: true
-      path: /h2-console
-  datasource:
-    url: "jdbc:h2:mem:dev"
-    username: sa
-    password: sa
-  jpa:
-      database-platform: org.hibernate.dialect.H2Dialect
-server:
-  port: 9011
-
+      path: /h2-console/
+      settings:
+        web-allow-others: true
 logging:
   level:
-    web: trace
-    sql: trace
+    root: INFO
+    web: DEBUG
+
+server:
+  port: 9011
