--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,9 +1,8 @@
----
 spring:
   datasource:
     username: sa
     password: sa
-    url: "jdbc:h2:mem:dev"
+    url: jdbc:h2:mem:dev
   h2:
     console:
       enabled: true
@@ -14,6 +13,3 @@ logging:
   level:
     root: INFO
     web: DEBUG
-
-server:
-  port: 9011
