--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,9 @@
----
 spring:
-  jpa:
-    generate-ddl: true
-    show-sql: true
-    hibernate:
-      ddl-auto: create
-  output:
-    ansi:
-      enabled: always
+  datasource:
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
 
 rsa:
   private-key: classpath:certs/private.pem
   public-key: classpath:certs/public.pem
-
-server:
-  address: 0.0.0.0
