--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -3,6 +3,7 @@ spring:
     username: sa
     password: sa
     url: jdbc:h2:mem:dev
+    driverClassName: org.h2.Driver
   h2:
     console:
       enabled: true
