--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,13 @@ spring:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
-
+    driverClassName: org.postgresql.Driver
 rsa:
   private-key: classpath:certs/private.pem
   public-key: classpath:certs/public.pem
+springdoc:
+  swagger-ui:
+    path: /v1/api/taskmanager.html
+sentry:
+  dsn: ${SENTRY_AUTH_TOKEN}
+  traces-sample-rate: 1.0
