--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,5 @@ springdoc:
   swagger-ui:
     path: /v1/api/taskmanager.html
 sentry:
-  dsn: ${SENTRY_AUTH_TOKEN}
+  dsn: https://89cb59e5066e078f8e3f2554a97c605e@o4507431344996352.ingest.de.sentry.io/4507431381893200
   traces-sample-rate: 1.0
