--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  profiles:
+    default: development
   output:
     ansi:
       enabled: always
